# tauri-browse

./: .gitignore  LICENSE  README.md  pyproject.toml  tauri_browse.py
skills/tauri-browse/: SKILL.md
skills/tauri-browse/references/: authentication.md  commands.md  session-management.md  snapshot-refs.md
skills/tauri-browse/templates/: authenticated-session.sh  capture-workflow.sh  form-automation.sh
skills/tauri-dogfood/: SKILL.md
skills/tauri-dogfood/references/: issue-taxonomy.md
skills/tauri-dogfood/templates/: dogfood-report-template.md
test/: test_dogfood_skill.py  test_tauri_browse_skill.py
