[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tauri-browse"
version = "0.1.0"
description = "WebDriver CLI for Tauri apps via tauri-driver"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    {name = "nullbio"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Testing",
]

[project.scripts]
tauri-browse = "tauri_browse:main"

[project.urls]
Repository = "https://github.com/nullbio/tauri-browse"
